# litchi-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  x86_64-unknown-litchi-user.json  x86_64-unknown-litchi.json  x86_64-unknown-uefi-debug.json
.cargo/: config.toml
litchi-boot/: Cargo.toml
litchi-boot/.cargo/: config.toml
litchi-boot/src/: file_system.rs  frame_allocator.rs  kernel_loader.rs  lib.rs  main.rs  page_table.rs
litchi-common/: Cargo.toml
litchi-common/src/: boot_info.rs  elf_loader.rs  lib.rs
litchi-kernel/: Cargo.toml
litchi-kernel/.cargo/: config.toml
litchi-kernel/src/: acpi.rs  allocator.rs  frame_allocator.rs  gdt.rs  heap.rs  interrupt.rs  interrupts.rs  kernel_task.rs  main.rs  memory.rs  qemu.rs  resource.rs  serial_log.rs  serial_logger.rs  syscall.rs  task.rs
litchi-kernel/src/frame_allocator/: global.rs  raii.rs
litchi-kernel/src/interrupt/: interrupt_handlers.rs  io_apic.rs  local_apic.rs  macros.rs  trap_handlers.rs  user_handlers.rs
litchi-kernel/src/kernel_task/: broadcast.rs  executor.rs  mpsc.rs  serial.rs  sleep.rs  time.rs
litchi-kernel/src/resource/: term.rs
litchi-kernel/src/task/: frame.rs  manager.rs  task.rs
litchi-user/: Cargo.toml
litchi-user-common/: Cargo.toml
litchi-user-common/src/: heap.rs  lib.rs  resource.rs  syscall.rs
litchi-user-common/src/syscall/: buffer.rs
litchi-user/.cargo/: config.toml
litchi-user/src/: heap.rs  lib.rs  print.rs  syscall.rs  term.rs  tsc.rs
