[package]
name = "litchi-boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
align-data = "0.1"
itertools = { version = "0.10", default-features = false }
size_format = "1.0"
uefi = { version = "0.15", features = ["alloc"] }
uefi-services = "0.12"
log = "0.4"
x86_64 = "0.14"
xmas-elf = "0.8"
