[package]
name = "litchi-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10", default-features = false }
log = "0.4"
size_format = "1.0"
uefi = "0.15"
x86_64 = "0.14"
xmas-elf = "0.8"
