[package]
name = "litchi-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
linked_list_allocator = "0.9"
log = "0.4"
size_format = "1.0"
spin = "0.9"
uart_16550 = "0.2"
x2apic = "0.4"
x86_64 = "0.14"

litchi-common = { path = "../litchi-common"}
