[package]
name = "litchi-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = "4.1"
align-data = "0.1"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
futures = { version = "0.3", default-features = false }
futures-async-stream = "0.2"
itertools = { version = "0.10", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
linked_list_allocator = "0.9"
log = "0.4"
paste = "1.0"
seq-macro = "0.3"
size_format = "1.0"
spin = "0.9"
uart_16550 = "0.2"
x2apic = "0.4"
x86_64 = "0.14"

litchi-common = { path = "../litchi-common"}
litchi-user-common = { path = "../litchi-user-common" }
