[package]
name = "litchi-user-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-as-inner = "0.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
static_assertions = "1.1"
x86_64 = "0.14"
